# randimg-backend-rs

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  PIXIV_CLIENT_GUIDE.md  README.md
crates/randimg-core/: Cargo.toml
crates/randimg-core/benches/: color_benchmark.rs
crates/randimg-core/examples/: color_extract_demo.rs  oss_upload_demo.rs  recalculate_all_colors.rs  remove_inaccessible_images.rs  remove_manga.rs  remove_placeholder_images.rs
crates/randimg-core/src/: config.rs  db_backend.rs  error.rs  lib.rs  watchdog.rs
crates/randimg-core/src/auth/: jwt.rs  middleware.rs  password.rs
crates/randimg-core/src/color/: kmeans.rs  mod.rs
crates/randimg-core/src/db/: mod.rs
crates/randimg-core/src/db/entities/: admin.rs  apalis_job.rs  author.rs  dead_letter.rs  image.rs  image_color_palette.rs  image_tag_association.rs  mod.rs  pixiv_credential.rs  task.rs  task_dependency.rs  task_enum.rs
crates/randimg-core/src/db/query/: admin.rs  apalis_job.rs  crawler.rs  dead_letter.rs  image.rs  mod.rs  pixiv_credential.rs  task.rs  task_dependency.rs  task_tree.rs
crates/randimg-core/src/dogecloud/: api.rs  oss.rs
crates/randimg-core/src/handlers/: auth.rs  author.rs  crawler.rs  health.rs  image.rs  pixiv_credential.rs  statistic.rs  tag.rs  task.rs
crates/randimg-core/src/pixiv/: error.rs  mod.rs
crates/randimg-core/src/task_queue/: fang_backend.rs  fingerprint.rs  handlers.rs  jobs.rs  mod.rs  retry.rs
crates/randimg-core/src/task_queue/handlers/: accessibility_check.rs  cleanup.rs  color_extract.rs  crawl.rs  discover.rs  download.rs  helpers.rs  mod.rs  refresh_pixiv_token.rs  upload.rs
crates/randimg-core/tests/: auth_test.rs  cleanup_test.rs  color_test.rs  config_test.rs  crawl_filter_test.rs  db_test.rs  dlq_test.rs  error_test.rs  handler_test.rs  idempotency_test.rs  job_test.rs  retry_test.rs
crates/randimg-core/tests/common/: mod.rs
crates/randimg-server/: Cargo.toml
crates/randimg-server/src/: main.rs
crates/randimg-worker/: Cargo.toml
crates/randimg-worker/src/: main.rs
docs/: api.md  task-flow-design.md
docs/superpowers/plans/: 2026-05-31-rust-rewrite.md  2026-05-31-task-api.md  2026-06-01-cancel-all-pending-tasks.md  2026-06-01-dual-database-support.md  2026-06-01-root-derived-status.md  2026-06-02-color-worker-process-isolation.md  2026-06-02-flatten-task-tree.md  2026-06-03-apalis-to-fang-migration.md  2026-06-03-flatten-pagination.md  2026-06-03-pixiv-crawl-filters.md  2026-06-03-remove-sqlite-redis-simplify.md  2026-06-04-task-status-tracking.md  2026-06-05-task-queue-overhaul.md  2026-06-06-color-filter-random-list.md  2026-06-06-remove-manga-example.md
docs/superpowers/specs/: 2026-06-06-color-filter-random-list-design.md  2026-06-06-remove-manga-example-design.md
examples/: color_extract_demo.rs  oss_upload_demo.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20260531_000001_create_base_tables.rs  m20260531_000002_schema_refactor.rs  m20260531_000003_color_palette.rs  m20260531_000004_rename_accessible.rs  m20260531_000005_add_deleted_at.rs  m20260531_000006_create_pixiv_credentials.rs  m20260601_000001_create_task_hierarchy.rs  m20260601_000002_fix_task_hierarchy_fk.rs  m20260602_000001_add_downloaded.rs  m20260603_000001_add_illust_metadata.rs  m20260603_002_create_tasks_table.rs  m20260604_001_alter_fang_task_id_to_text.rs  m20260604_002_fix_primary_lab_type.rs  m20260605_001_add_task_indexes.rs  m20260605_002_drop_task_dependencies.rs  m20260605_003_create_dead_letter.rs  m20260605_004_add_task_priority.rs  m20260605_005_add_task_progress.rs  m20260605_006_params_text_to_jsonb.rs  m20260605_007_add_enum_types.rs  m20260606_000001_add_unique_tag_name.rs  m20260606_000002_json_to_jsonb.rs
src/: config.rs  db_backend.rs  error.rs  lib.rs  main.rs
src/auth/: jwt.rs  middleware.rs  password.rs
src/color/: kmeans.rs  mod.rs
src/db/: mod.rs
src/db/entities/: admin.rs  apalis_job.rs  author.rs  crawler.rs  image.rs  mod.rs  tag.rs  task.rs
src/db/query/: admin.rs  apalis_job.rs  author.rs  crawler.rs  image.rs  mod.rs  pixiv_credential.rs  tag.rs  task.rs  task_tree.rs
src/dogecloud/: api.rs  mod.rs  oss.rs  types.rs
src/handlers/: auth.rs  author.rs  crawler.rs  health.rs  image.rs  mod.rs  pixiv_credential.rs  statistic.rs  tag.rs  task.rs  task_tree.rs
src/pixiv/: mod.rs
src/task_queue/: handlers.rs  jobs.rs  mod.rs  runner.rs
src/task_queue/tasks/: accessibility_check.rs  color_extract.rs  crawl.rs  discover.rs  download.rs  mod.rs  refresh_pixiv_token.rs  upload.rs
tests/: api_test.rs  auth_test.rs  color_test.rs  config_test.rs  db_test.rs  error_test.rs  handler_test.rs  job_test.rs
