[package]
name = "randimg-backend-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
sea-orm = { version = "1", features = [
    "runtime-tokio-rustls",
    "sqlx-sqlite",
    "sqlx-postgres",
    "with-json",
    "with-chrono",
    "macros",
] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Auth
jsonwebtoken = "9"
argon2 = "0.5"
axum-extra = { version = "0.10", features = ["typed-header"] }

# HTTP client (for Pixiv, OSS)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Migration
migration = { path = "migration" }

# Image processing
image = "0.25"

# Config
dotenvy = "0.15"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = { version = "0.1", features = ["max_level_debug", "release_max_level_info"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
tracing-appender = "0.2"

# UUID for task IDs
uuid = { version = "1", features = ["v4"] }
pixiv-client = "1.0.0"
rayon = "1.12.0"

[[bin]]
name = "create_admin"
path = "src/bin/create_admin.rs"

[dev-dependencies]
# 测试用
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
