[package]
name = "randimg-backend-rs"
version = "0.1.0"
edition = "2024"

[features]
default = ["sqlite"]
sqlite = ["dep:apalis-sqlite", "sqlx/sqlite", "migration/sqlite", "sea-orm/sqlx-sqlite"]
postgres = ["dep:apalis-postgres", "sqlx/postgres", "migration/postgres", "sea-orm/sqlx-postgres"]

[dependencies]
# Web framework
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
sea-orm = { version = "1", default-features = false, features = [
    "runtime-tokio-rustls",
    "with-json",
    "with-chrono",
    "with-rust_decimal",
    "with-bigdecimal",
    "with-uuid",
    "macros",
] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Auth
jsonwebtoken = "9"
argon2 = "0.5"
axum-extra = { version = "0.10", features = ["typed-header"] }

# HTTP client (for Pixiv, OSS)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Migration
migration = { path = "migration", default-features = false }


# Image processing
image = "0.25"

# Config
dotenvy = "0.15"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = { version = "0.1", features = ["max_level_debug", "release_max_level_info"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
tracing-appender = "0.2"

# UUID for task IDs
uuid = { version = "1", features = ["v4"] }
pixiv-client = "1.1"
rayon = "1.12.0"

# Background job queue
apalis = { version = "1.0.0-rc.9", features = ["retry", "tracing"] }
apalis-sqlite = { version = "1.0.0-rc.8", default-features = false, features = ["tokio-comp", "migrate", "json", "chrono"], optional = true }
apalis-postgres = { version = "1.0.0-rc.8", default-features = false, features = ["tokio-comp", "migrate", "chrono"], optional = true }
apalis-codec = { version = "0.1.0-rc.9", features = ["json"] }
ulid = "1"

# Direct sqlx for querying Apalis Jobs table
sqlx = { version = "0.8", features = ["runtime-tokio-rustls"] }

# DogeCloud OSS (AWS S3 compatible)
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1"
aws-credential-types = "1"
hmac = "0.12"
sha1 = "0.10"
hex = "0.4"
serde_urlencoded = "0.7"
anyhow = "1"

[[bin]]
name = "create_admin"
path = "src/bin/create_admin.rs"

[[bin]]
name = "color-worker"
path = "src/bin/color_worker.rs"

[dev-dependencies]
# 测试用
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
sea-orm = { version = "1", default-features = false, features = [
    "runtime-tokio-rustls",
    "with-json",
    "with-chrono",
    "macros",
] }
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
