[workspace]
members = [
    "crates/randimg-core",
    "crates/randimg-server",
    "crates/randimg-worker",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
# Web framework
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
sea-orm = { version = "1", default-features = false, features = [
    "runtime-tokio-rustls",
    "with-json",
    "with-chrono",
    "with-rust_decimal",
    "with-bigdecimal",
    "with-uuid",
    "macros",
] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Auth
jsonwebtoken = "9"
argon2 = "0.5"
axum-extra = { version = "0.10", features = ["typed-header"] }

# HTTP client (for Pixiv, OSS)
reqwest = { version = "0.13", features = ["json", "rustls"], default-features = false }

# Migration
migration = { path = "migration", default-features = false }

# Image processing
image = "0.25"

# Config
dotenvy = "0.15"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = { version = "0.1", features = ["max_level_debug", "release_max_level_info"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
tracing-appender = "0.2"

# UUID for task IDs
uuid = { version = "1", features = ["v4"] }
pixiv-client = "1.2"
rayon = "1.12.0"

# Background job queue (fang — async API, sqlx-based)
# migrations-postgres 用于 fang::run_migrations_postgres() 初始化队列表
# 注意：需要同时启用 blocking + blocking-postgres 特性，因为 fang 的 Task 结构体有 diesel 属性 bug
fang = { version = "0.11.0-rc1", default-features = false, features = ["derive-error", "asynk-postgres", "blocking", "blocking-postgres", "migrations-postgres"] }
diesel = { version = "2", default-features = false, features = ["postgres"] }
ulid = "1"

# DogeCloud OSS (AWS S3 compatible)
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1"
aws-credential-types = "1"
hmac = "0.12"
sha1 = "0.10"
hex = "0.4"
serde_urlencoded = "0.7"
anyhow = "1"
mime_guess = "2"

# Dev dependencies
http-body-util = "0.1"
