[package]
name = "randimg-worker"
version.workspace = true
edition.workspace = true

[[bin]]
name = "randimg-worker"
path = "src/main.rs"

[dependencies]
randimg-core = { path = "../randimg-core", default-features = false, features = ["http"] }
axum = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dotenvy = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
dashmap = { workspace = true }

[features]
default = ["db-postgres", "queue-postgres"]
db-postgres = ["randimg-core/db-postgres"]
queue-postgres = ["randimg-core/queue-postgres"]
